--- a/app.yaml
+++ b/app.yaml
@@ -7,8 +7,8 @@ threadsafe: true
 handlers:
 - url: /favicon\.ico
   mime_type: image/vnd.microsoft.icon
-  static_files: static/images/favicon.ico
-  upload: static/images/favicon.ico
+  static_files: static/img/favicon.ico
+  upload: static/img/favicon.ico
 
 - url: /static/*
   static_dir: static
